fixed some css. Going to close this branch and focus on smaller, incremental fixes

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -20,12 +20,13 @@ header .wrapper {
   height: 70vh;
 }
 
-header h1 {
+header h1 a {
   margin-bottom: 2rem;
   font-size: 3rem;
   display: block;
   width: 100%;
   color: whitesmoke;
+  text-decoration: none;
 }
 
 header i {
